--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<title>Flaskr</title>
+<title>JingWay Play</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 <div class="page">
-  <h1>Flaskr</h1>
+  <h1>JingWay Play</h1>
   <div class="metanav">
   {% if not session.logged_in %}
-    <a href="{{ url_for('flaskr.login') }}">log in</a>
+    <a href="{{ url_for('jingway.login') }}">请登陆</a>
   {% else %}
-    <a href="{{ url_for('flaskr.logout') }}">log out</a>
+    <a href="{{ url_for('jingway.logout') }}">登出</a>
   {% endif %}
   </div>
   {% for message in get_flashed_messages() %}
