--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
 {% block body %}
-  <h2>Login</h2>
-  {% if error %}<p class="error"><strong>Error:</strong> {{ error }}{% endif %}
-  <form action="{{ url_for('flaskr.login') }}" method="post">
+  <h2>登陆</h2>
+  {% if error %}<p class="error"><strong>错误：</strong> {{ error }}{% endif %}
+  <form action="{{ url_for('jingway.login') }}" method="post">
     <dl>
-      <dt>Username:
-      <dd><input type="text" name="username">
-      <dt>Password:
-      <dd><input type="password" name="password">
-      <dd><input type="submit" value="Login">
+      <dt>管理员:
+      <dd><input type="text" name="admin">
+      <dt>密码:
+      <dd><input type="password" name="passwd">
+      <dd><input type="submit" value="确定">
     </dl>
   </form>
 {% endblock %}
